beans scopes demo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8888
 ######################
 # LAZY INITIALIZATION
 ######################
-spring.main.lazy-initialization=true
+#spring.main.lazy-initialization=true
